--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,17 @@
       "predeploy": [
         "npm run build --prefix functions"
       ]
+    },
+    {
+      "source": "functions-python",
+      "codebase": "functions-python",
+      "ignore": [
+        "venv",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
     }
   ],
   "hosting": {
