--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "^10.13.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
