--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase": "^10.13.1",
+    "@google-cloud/vertexai": "^1.7.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
