--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@google-cloud/vertexai": "^1.7.0",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "moment": "^2.30.1",
+    "starkbank": "^2.29.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
