--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/vertexai": "^1.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
     "moment": "^2.30.1",
