--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,40 @@
 {
+  "emulators": {
+    "singleProjectMode": false,
+    "auth": {
+      "port": 9099,
+      "host": "0.0.0.0"
+    },
+    "functions": {
+      "port": 5001,
+      "host": "0.0.0.0"
+    },
+    "storage": {
+      "port": 9199,
+      "host": "0.0.0.0"
+    },
+    "firestore": {
+      "port": 9093,
+      "host": "0.0.0.0"
+    },
+    "pubsub": {
+      "port": 8087,
+      "host": "0.0.0.0"
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000,
+      "host": "0.0.0.0"
+    },
+    "hosting": {
+      "port": 4173,
+      "host": "0.0.0.0"
+    },
+    "hub": {
+      "port": 4400,
+      "host": "0.0.0.0"
+    }
+  },
   "functions": [
     {
       "source": "functions",
@@ -31,5 +67,9 @@
     "predeploy": [
       "npm run build --prefix frontend"
     ]
+  },
+  "storage": {
+    "target": "main",
+    "rules": "storage.rules"
   }
 }
