fix: improve credit provider form

--- a/firebase.json
+++ b/firebase.json
@@ -71,5 +71,9 @@
   "storage": {
     "target": "main",
     "rules": "storage.rules"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
