feat: add profhet api on cloud run

--- a/firebase.json
+++ b/firebase.json
@@ -49,6 +49,17 @@
       "predeploy": [
         "npm run build --prefix functions"
       ]
+    },
+    {
+      "source": "prophet_stark",
+      "codebase": "prophet_stark",
+      "ignore": [
+        "venv",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
     }
   ],
   "hosting": {
